Closed Bug 299533 Opened 20 years ago Closed 20 years ago

hang when selecting across select dropdown arrow

Categories

(Core :: Layout: Form Controls, defect)

x86
All
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: tuukka.tolvanen, Assigned: mrbkap)

References

Details

(Keywords: hang, regression)

Attachments

(3 files)

firefox linux trunk 20050702 xft and pango hang when selecting across select dropdown arrow (not on all pages)
Attached file testcase
Keywords: hang
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050702 Firefox/1.0+ ID:2005070218 Confirmed.
OS: Linux → All
Flags: blocking1.8b3?
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050703 Firefox/1.0+ ID:2005070303 Confirmed.
Attached file BTs
a gdb bt full and a few cycles of cont ^c bt
Looks like 0xb4c90041 in nsBlockFrame::HandleEvent (this=0x8417618, aPresContext=0x840fcb0, aEvent=0xbfffe820, aEventStatus=0xbfffe6f8) at http://lxr.mozilla.org/mozilla/source/layout/generic/nsBlockFrame.cpp#6526 is where it's sitting.
regressed: Build ID: 2005070105 working: Build ID: 2005062905 Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8b2) Gecko/20050629 There is a long list of checkins between these dates: http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=SeaMonkeyAll&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2005-06-29+00%3A00&maxdate=2005-07-01+05%3A00&cvsroot=%2Fcvsroot
Keywords: regression
backing out http://webtools.mozilla.org/bonsai/cvsquery.cgi?date=explicit&mindate=2005-06-30%2015:49&maxdate=2005-06-30%2015:59 2005-06-30 15:50 mrbkap%gmail.com mozilla/ layout/ generic/ nsFrame.cpp 3.566 2/2 bug 297224: Fix hang trying to move the caret by making sure that we always hit the first and last frames in a line when iterating over that line. r+sr=roc a=bsmedberg seems to fix this hang for me.
If this is of any help, I get the hang when I select the error text of the XUL error page.
(In reply to comment #8) > If this is of any help, I get the hang when I select the error text of the XUL > error page. Tuukaa found the bug, as backing out solves the problem. Besides, that checkin is in the 6 hour regression timeframe I found while he was commenting. working: http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2005-06-30-13-trunk/firefox-1.0+.en-US.win32.zip regressed: http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2005-06-30-19-trunk/firefox-1.0+.en-US.win32.zip
Attached patch fix the hangSplinter Review
This wasn't in the original patch, and is incorrect (we call GetLastLeaf on the farStoppingFrame). Sorry.
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #188166 - Flags: superreview?(roc)
Attachment #188166 - Flags: review?(roc)
Flags: blocking1.8b3? → blocking1.8b3+
Attachment #188166 - Flags: superreview?(roc)
Attachment #188166 - Flags: superreview+
Attachment #188166 - Flags: review?(roc)
Attachment #188166 - Flags: review+
Comment on attachment 188166 [details] [diff] [review] fix the hang Fixes another hang in caret movement code.
Attachment #188166 - Flags: approval1.8b3?
Comment on attachment 188166 [details] [diff] [review] fix the hang a=chofmann
Attachment #188166 - Flags: approval1.8b3? → approval1.8b3+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Blocks: 299779
*** Bug 299779 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: