bug 299533: Fix hang when dragging across a select down arrow. r+sr=roc a=chofmann